<resources>
    <string name="app_name">My Bucket List</string>
    <string name="front_page">Front Page</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mainpicture">Main Picture</string>
    <string name="all">All</string>
    <string name="wishlist">Wishlist</string>
    <string name="completed">Completed</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="remove_from_wishlist">Remove from Wishlist</string>
    <string name="create_new_activity">Create new bucket list item</string>
    <string name="addGoal">Add Goal</string>
    <string name="goal">Goal</string>
    <string name="goalIcon">Goal Icon</string>
    <string name="sign_in_register">SIGN IN / REGISTER</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="all_goals">All Goals</string>
    <string name="completed_list">Completed List</string>
    <string name="about_us">About us</string>
    <string name="about_us_description">This app is using an open-source API to follow bucket list goals. The external resource used is presented below:</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="welcome">Welcome!</string>
    <string name="current_progress_in_your_bucketlist">Current progress in your bucketlist:</string>
    <string name="logo">logo</string>
    <string name="no_goals_yet_please_add">No goals yet, please add</string>
    <string name="search">Search</string>
</resources>