<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/logo"
        android:title="@string/my_bucket_list" />

    <item
        android:id="@+id/allGalleryFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/all_goals" />

    <item
        android:id="@+id/galleryFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/completedGalleryFragment"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/completed_list" />

    <item
        android:id="@+id/nav_about_us"
        android:icon="@android:drawable/ic_info"
        android:title="@string/about_us"/>
</menu>