<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#2C2C2C"
            app:tabIndicatorColor="#FFFFFF"
            app:tabTextColor="#FFFFFF">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/allTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/wishlistTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/completedTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />
        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/galleryGridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="5" />

</androidx.constraintlayout.widget.ConstraintLayout>